--- a/browser-test.html
+++ b/browser-test.html
@@ -48,9 +48,7 @@
 
 		<h3>Codes:</h3>
 		<p>
-			<code>
-				<pre>
-
+		<pre style="width: 100%; background-color: #d1d1d1; color: #444444; padding: 4px 8px;">
 &lt;script src="./dist/node-hooker.umd.js"&gt;&lt;/script&gt;
 &lt;script&gt;
     // The 'Hooker' global variable is now available!
@@ -65,9 +63,7 @@
     // Console output: The browser event fired with message: "Hello from the browser!"
 
 &lt;/script&gt;
-
-				</pre>
-			</code>
+		</pre>
 		</p>
 
 		<h3>Console:</h3>
